--- a/social-proof-section-master/styles.scss
+++ b/social-proof-section-master/styles.scss
@@ -13,7 +13,7 @@ body {
 
 .content {
     background-color: white;
-    padding: 50px;
+    padding: 50px 100px;
     width: 100%;
     min-height: 700px;
     margin: auto;
@@ -136,15 +136,18 @@ body {
 
 
 @media screen and (max-width: 1310px) {
-    .container1 {
-        .star-ctr {
-            .star-card {
-                align-items: center;
-                justify-content: center;
-                flex-wrap: wrap;
-                .star-desc {
-                    text-align: center;
-                    width: 100%!important;
+    .content {
+        padding: 50px;
+        .container1 {
+            .star-ctr {
+                .star-card {
+                    align-items: center;
+                    justify-content: center;
+                    flex-wrap: wrap;
+                    .star-desc {
+                        text-align: center;
+                        width: 100%!important;
+                    }
                 }
             }
         }
@@ -152,26 +155,29 @@ body {
 }
 
 @media screen and (max-width: 1210px) {
-    .container1 {
-        .review-ctr, .star-ctr {
-            width: 100%!important;
-        }
-        .review-ctr {
-            padding: 0 50px;
-        }
-        .star-ctr {
-            margin-top: 50px;
-            align-items: center!important;
-            .star-card {
-                margin-left: 0!important;
+    .content {
+        padding: 30px;
+        .container1 {
+            .review-ctr, .star-ctr {
+                width: 100%!important;
             }
+            .review-ctr {
+                padding: 0 50px;
+            }
+            .star-ctr {
+                margin-top: 50px;
+                align-items: center!important;
+                .star-card {
+                    margin-left: 0!important;
+                }
+            }
+        }  
+        
+        .card-container {
+            flex-direction: column;
+            justify-content: space-evenly;
+            align-items: center;
         }
-    }  
-    
-    .card-container {
-        flex-direction: column;
-        justify-content: space-evenly;
-        align-items: center;
     }
 }
 
