--- a/social-media-dashboard-with-theme-switcher-master/style.scss
+++ b/social-media-dashboard-with-theme-switcher-master/style.scss
@@ -1,100 +1,261 @@
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
 }
 
 :root {
-    --bg-color: hsl(0, 0%, 100%);
-    --bg-pattern: hsl(225, 100%, 98%);
-    --card-bg: hsl(227, 47%, 96%);
-    --text-color: hsl(228, 12%, 44%);
-    --text-color-dark: hsl(230, 17%, 14%);
+  --bg-color: hsl(0, 0%, 100%);
+  --bg-pattern: hsl(225, 100%, 98%);
+  --card-bg: hsl(227, 47%, 96%);
+  --card-bg-hover: hsl(261, 57%, 95%);
+  --text-color: hsl(228, 12%, 44%);
+  --text-color-dark: hsl(230, 17%, 14%);
 }
 
 [data-theme="dark"] {
-    --bg-color: hsl(230, 17%, 14%);
-    --bg-pattern: hsl(232, 19%, 15%);
-    --card-bg: hsl(228, 28%, 20%);
-    --text-color: hsl(228, 34%, 66%);
-    --text-color-dark: hsl(0, 0%, 100%);
+  --bg-color: hsl(230, 17%, 14%);
+  --bg-pattern: hsl(232, 19%, 15%);
+  --card-bg: hsl(228, 28%, 20%);
+  --card-bg-hover: hsl(228, 28%, 25%);
+  --text-color: hsl(228, 34%, 66%);
+  --text-color-dark: hsl(0, 0%, 100%);
 }
-
 
 body {
-    height: 100vh;
-    width: 100%;
-    background: linear-gradient(to bottom, var(--bg-pattern) 35%, var(--bg-color) 0%);
-    font-family: 'Inter', sans-serif;
-    .app-ctr {
-        width: 80%;
-        height: 100%;
-        overflow: auto;
-        margin: 0 auto;
-        padding: 50px 0;
-        .app-header {
+  height: 100vh;
+  width: 100%;
+  background: linear-gradient(
+    to bottom,
+    var(--bg-pattern) 30%,
+    var(--bg-color) 0%
+  );
+  font-family: "Inter", sans-serif;
+  .up {
+    color: hsl(163, 72%, 41%);
+  }
+  .down {
+    color: hsl(356, 69%, 56%);
+  }
+  .app-ctr {
+    width: 80%;
+    height: 100%;
+    overflow: auto;
+    margin: 0 auto;
+    padding: 50px 0;
+    .app-header {
+      display: flex;
+      justify-content: space-between;
+      .description {
+        .app-name {
+          font-size: 26px;
+          color: var(--text-color-dark);
+          font-weight: 700;
+        }
+        .count {
+          margin-top: 5px;
+          font-size: 14px;
+          color: var(--text-color);
+        }
+      }
+      .toggle-ctr {
+        font-size: 14px;
+        font-weight: 700;
+        color: var(--text-color);
+        .switch {
+          position: relative;
+          display: inline-block;
+          margin-left: 10px;
+          width: 40px;
+          height: 21px;
+          input {
+            opacity: 0;
+            width: 0;
+            height: 0;
+          }
+          .slider {
+            position: absolute;
+            cursor: pointer;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(
+              to right,
+              hsl(210, 78%, 56%),
+              hsl(146, 68%, 55%)
+            );
+            -webkit-transition: 0.4s;
+            transition: 0.4s;
+            border-radius: 21px;
+          }
+          .slider:before {
+            position: absolute;
+            content: "";
+            height: 15px;
+            width: 15px;
+            left: 3px;
+            bottom: 3px;
+            background-color: var(--bg-pattern);
+            -webkit-transition: 0.4s;
+            transition: 0.4s;
+            border-radius: 50%;
+          }
+          input:checked + .slider:before {
+            -webkit-transform: translateX(19px);
+            -ms-transform: translateX(19px);
+            transform: translateX(19px);
+          }
+        }
+      }
+    }
+    .dashboard-ctr {
+      display: flex;
+      justify-content: space-between;
+      margin-top: 35px;
+      .dashboard-card {
+        height: 250px;
+        width: 23%;
+        background: var(--card-bg);
+        border-radius: 7px;
+        overflow: hidden;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        cursor: pointer;
+        .card-border-top {
+          height: 5px;
+          width: 100%;
+        }
+        .account-name {
+          font-size: 14px;
+          margin-top: 35px;
+          color: var(--text-color);
+          font-weight: 700;
+        }
+        .account-name:before {
+          content: "";
+          height: 20px;
+          width: 20px;
+          display: block;
+          float: left;
+          margin-right: 5px;
+          background-repeat: no-repeat;
+          background-size: 20px 20px;
+          background-position: center;
+        }
+        .followers-count {
+          font-size: 45px;
+          margin-top: 25px;
+          font-weight: 800;
+          color: var(--text-color-dark);
+        }
+        .followers {
+          font-size: 14px;
+          color: var(--text-color);
+          text-transform: uppercase;
+          letter-spacing: 5px;
+          font-weight: 500;
+        }
+        .count-change {
+          margin-top: 40px;
+          font-size: 14px;
+          font-weight: 600;
+        }
+      }
+      .dashboard-card:hover {
+        background: var(--card-bg-hover);
+      }
+      .dashboard-card:nth-child(1) > .card-border-top {
+        background: hsl(208, 92%, 53%);
+      }
+      .dashboard-card:nth-child(2) > .card-border-top {
+        background: hsl(203, 89%, 53%);
+      }
+      .dashboard-card:nth-child(3) > .card-border-top {
+        background: linear-gradient(
+          to right,
+          hsl(37, 97%, 70%),
+          hsl(329, 70%, 58%)
+        );
+      }
+      .dashboard-card:nth-child(4) > .card-border-top {
+        background: hsl(348, 97%, 39%);
+      }
+      .dashboard-card:nth-child(1) > .account-name:before {
+        background-image: url("./assets/icon-facebook.svg");
+      }
+    }
+    .overview-header {
+      font-size: 22px;
+      color: var(--text-color-dark);
+      font-weight: 700;
+      margin-top: 40px;
+    }
+    .overview-card-ctr {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      margin-top: 30px;
+      .overview-card {
+        width: 23%;
+        height: 160px;
+        background: var(--card-bg);
+        cursor: pointer;
+        margin-bottom: 30px;
+        border-radius: 7px;
+        padding: 30px;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        .context-row {
             display: flex;
             justify-content: space-between;
-            .description {
-                .app-name {
-                    font-size: 26px;
-                    color: var(--text-color-dark);
-                    font-weight: 700;
-                }
-                .count {
-                    margin-top: 5px;
-                    font-size: 14px;
-                    color: var(--text-color);
-                }
+            .context {
+                font-size: 14px;
+                color: var(--text-color);
+                font-weight: 600;
+            }
+            .fb-img {
+                background: url('./assets/icon-facebook.svg');
+            }
+            .insta-img {
+                background: url('./assets/icon-instagram.svg');
+            }
+            .twitter-img {
+                background: url('./assets/icon-twitter.svg');
+            }
+            .youtube-img {
+                background: url('./assets/icon-youtube.svg');
+            }
+            .app-logo {
+                height: 25px;
+                width: 25px;
+                background-repeat: no-repeat;
+                background-size: cover;
+                background-position: center;
+            }
+            
+        }
+        .count-row {
+            display: flex;
+            justify-content: space-between;
+            .count {
+                font-size: 32px;
+                color: var(--text-color-dark);
+                font-weight: 700;
+                align-self: flex-end;
+            }
+            .change {
+                font-size: 14px;
+                font-weight: 700;
+                align-self: flex-end;
             }
         }
-        .toggle-ctr {
-            font-size: 14px;
-            font-weight: 700;
-            color: var(--text-color);
-            .switch {
-                position: relative;
-                display: inline-block;
-                margin-left: 10px;
-                width: 40px;
-                height: 21px;
-                input {
-                    opacity: 0;
-                    width: 0;
-                    height: 0;
-                }
-                .slider {
-                    position: absolute;
-                    cursor: pointer;
-                    top: 0;
-                    left: 0;
-                    right: 0;
-                    bottom: 0;
-                    background: linear-gradient(to right, hsl(210, 78%, 56%), hsl(146, 68%, 55%));
-                    -webkit-transition: .4s;
-                    transition: .4s;
-                    border-radius: 21px;
-                }
-                .slider:before {
-                    position: absolute;
-                    content: "";
-                    height: 15px;
-                    width: 15px;
-                    left: 3px;
-                    bottom: 3px;
-                    background-color: var(--bg-pattern);
-                    -webkit-transition: .4s;
-                    transition: .4s;
-                    border-radius: 50%;
-                }
-                input:checked + .slider:before {
-                    -webkit-transform: translateX(19px);
-                    -ms-transform: translateX(19px);
-                    transform: translateX(19px);
-                }
-            }
-        }
+      }
+      .overview-card:hover {
+        background: var(--card-bg-hover);
+      }
     }
+  }
 }
-
-
