--- a/social-media-dashboard-with-theme-switcher-master/style.css
+++ b/social-media-dashboard-with-theme-switcher-master/style.css
@@ -41,7 +41,6 @@ body .down {
 
 body .app-ctr {
   width: 80%;
-  height: 100%;
   overflow: auto;
   margin: 0 auto;
   padding: 50px 0;
@@ -51,9 +50,12 @@ body .app-ctr .app-header {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
+  margin: 0 1%;
 }
 
 body .app-ctr .app-header .description .app-name {
@@ -71,6 +73,9 @@ body .app-ctr .app-header .description .count {
 body .app-ctr .app-header .toggle-ctr {
   font-size: 14px;
   font-weight: 700;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
   color: var(--text-color);
 }
 
@@ -124,15 +129,15 @@ body .app-ctr .dashboard-ctr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   margin-top: 35px;
 }
 
 body .app-ctr .dashboard-ctr .dashboard-card {
   height: 250px;
   width: 23%;
+  margin: 1%;
   background: var(--card-bg);
   border-radius: 7px;
   overflow: hidden;
@@ -146,6 +151,7 @@ body .app-ctr .dashboard-ctr .dashboard-card {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 20px;
   cursor: pointer;
 }
 
@@ -223,16 +229,13 @@ body .app-ctr .overview-header {
   font-size: 22px;
   color: var(--text-color-dark);
   font-weight: 700;
-  margin-top: 40px;
+  margin: 40px 1% 0 1%;
 }
 
 body .app-ctr .overview-card-ctr {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin-top: 30px;
@@ -243,7 +246,7 @@ body .app-ctr .overview-card-ctr .overview-card {
   height: 160px;
   background: var(--card-bg);
   cursor: pointer;
-  margin-bottom: 30px;
+  margin: 1%;
   border-radius: 7px;
   padding: 30px;
   display: -webkit-box;
@@ -323,5 +326,34 @@ body .app-ctr .overview-card-ctr .overview-card .count-row .change {
 
 body .app-ctr .overview-card-ctr .overview-card:hover {
   background: var(--card-bg-hover);
+}
+
+@media screen and (max-width: 1300px) {
+  .dashboard-card, .overview-card {
+    width: 31% !important;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  .dashboard-card, .overview-card {
+    width: 48% !important;
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .dashboard-card, .overview-card {
+    width: 98% !important;
+  }
+  .description, .toggle-ctr {
+    width: 100% !important;
+  }
+  .toggle-ctr {
+    margin-top: 15px;
+    padding-top: 15px;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    border-top: 1px solid var(--text-color);
+  }
 }
 /*# sourceMappingURL=style.css.map */
