--- a/social-media-dashboard/style.scss
+++ b/social-media-dashboard/style.scss
@@ -189,7 +189,16 @@ body {
       .dashboard-card:nth-child(1) > .account-name:before {
         background-image: url("./assets/icon-facebook.svg");
       }
-    }
+      .dashboard-card:nth-child(2) > .account-name:before {
+        background-image: url("./assets/icon-twitter.svg");
+      }
+      .dashboard-card:nth-child(3) > .account-name:before {
+        background-image: url("./assets/icon-instagram.svg");
+      }
+      .dashboard-card:nth-child(4) > .account-name:before {
+        background-image: url("./assets/icon-youtube.svg");
+      }
+    } 
     .overview-header {
       font-size: 22px;
       color: var(--text-color-dark);
