--- a/url-shortening-api/style.css
+++ b/url-shortening-api/style.css
@@ -1,5 +1,86 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+:root {
+  --white: #fff;
+  --cyan: hsl(180, 66%, 49%);
+  --dark-violet: hsl(257, 27%, 26%);
+  --red: hsl(0, 87%, 67%);
+  --gray: hsl(247, 5%, 58%);
+  --grayish-violet: hsl(257, 7%, 63%);
+  --dark-blue: hsl(255, 11%, 22%);
+  --dark-violet: hsl(260, 8%, 14%);
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
+}
+
+body {
+  height: 100vh;
+  width: 100%;
+}
+
+body header {
+  padding: 50px 0;
+  width: 80%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  font-weight: 600;
+  margin: 0 auto;
+}
+
+body header .header-left,
+body header .header-right {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+body header .header-left .logo,
+body header .header-right .logo {
+  width: 121px;
+  height: 33px;
+  margin-right: 20px;
+  background: url("/assets/logo.svg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  cursor: pointer;
+}
+
+body header .header-left .option,
+body header .header-right .option {
+  margin: 0 20px;
+  color: var(--gray);
+  cursor: pointer;
+}
+
+body header .header-left .option:hover,
+body header .header-right .option:hover {
+  color: var(--dark-violet);
+}
+
+body header .header-left .signup-btn,
+body header .header-right .signup-btn {
+  margin-left: 20px;
+  background: var(--cyan);
+  color: var(--white);
+  border-radius: 40px;
+  padding: 10px 30px;
+  cursor: pointer;
+}
+
+body header .header-left .signup-btn:hover,
+body header .header-right .signup-btn:hover {
+  opacity: 0.7;
+}
+/*# sourceMappingURL=style.css.map */
