--- a/url-shortening-api/style.css
+++ b/url-shortening-api/style.css
@@ -12,8 +12,7 @@
 * {
   margin: 0;
   padding: 0;
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
+  box-sizing: border-box;
   font-family: "Poppins", sans-serif;
 }
 
@@ -21,30 +20,19 @@ body {
   height: 100vh;
   width: 100%;
 }
-
 body header {
   padding: 50px 0;
   width: 80%;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  justify-content: space-between;
   font-weight: 600;
   margin: 0 auto;
 }
-
 body header .header-left,
 body header .header-right {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  align-items: center;
 }
-
 body header .header-left .logo,
 body header .header-right .logo {
   width: 121px;
@@ -56,31 +44,67 @@ body header .header-right .logo {
   background-position: center;
   cursor: pointer;
 }
-
 body header .header-left .option,
 body header .header-right .option {
   margin: 0 20px;
   color: var(--gray);
   cursor: pointer;
+  font-size: 14px;
 }
-
 body header .header-left .option:hover,
 body header .header-right .option:hover {
   color: var(--dark-violet);
 }
-
 body header .header-left .signup-btn,
 body header .header-right .signup-btn {
   margin-left: 20px;
   background: var(--cyan);
   color: var(--white);
   border-radius: 40px;
+  font-size: 14px;
   padding: 10px 30px;
   cursor: pointer;
 }
-
 body header .header-left .signup-btn:hover,
 body header .header-right .signup-btn:hover {
   opacity: 0.7;
 }
-/*# sourceMappingURL=style.css.map */
+body section .page-desc {
+  display: flex;
+  width: 90%;
+  margin-left: 10%;
+}
+body section .page-desc .text-ctr {
+  width: 45%;
+  margin-right: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+body section .page-desc .text-ctr .text-header {
+  font-size: 50px;
+  font-weight: 700;
+  color: var(--dark-violet);
+  line-height: 1.3;
+}
+body section .page-desc .text-ctr .text-desc {
+  font-size: 18px;
+  font-weight: 500;
+  color: var(--gray);
+}
+body section .page-desc .text-ctr .get-started-btn {
+  background: var(--cyan);
+  color: var(--white);
+  width: max-content;
+  margin-top: 35px;
+  padding: 15px 45px;
+  border-radius: 45px;
+  font-weight: 500;
+  cursor: pointer;
+}
+body section .page-desc .text-ctr .get-started-btn:hover {
+  opacity: 0.7;
+}
+body section .page-desc .working-img {
+  width: 50%;
+}
