--- a/url-shortening-api/style.scss
+++ b/url-shortening-api/style.scss
@@ -46,6 +46,7 @@ body {
         margin: 0 20px;
         color: var(--gray);
         cursor: pointer;
+        font-size: 14px;
         &:hover {
           color: var(--dark-violet);
         }
@@ -56,11 +57,53 @@ body {
         background: var(--cyan);
         color: var(--white);
         border-radius: 40px;
+        font-size: 14px;
         padding: 10px 30px;
         cursor: pointer;
         &:hover {
             opacity: 0.7;
         }
+      }
+    }
+  }
+  section {
+    .page-desc{
+      display: flex;
+      width: 90%;
+      margin-left: 10%;
+      .text-ctr {
+        width: 45%;
+        margin-right: 5%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;;
+        .text-header {
+          font-size: 50px;
+          font-weight: 700;
+          color: var(--dark-violet);
+          line-height: 1.3;
+        }
+        .text-desc {
+          font-size: 18px;
+          font-weight: 500;
+          color: var(--gray);
+        }
+        .get-started-btn {
+          background: var(--cyan);
+          color: var(--white);
+          width: max-content;
+          margin-top: 35px;
+          padding: 15px 45px;
+          border-radius: 45px;
+          font-weight: 500;
+          cursor: pointer;
+          &:hover {
+            opacity: 0.7;
+          }
+        }
+      }
+      .working-img {
+        width: 50%;
       }
     }
   }
